--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,46 @@
 {
   "compilerOptions": {
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": false,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "incremental": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@icons/*": ["./assets/icons/*"],
+      "@styles/*": ["./assets/styles/*"],
+      "@config/*": ["./config/*"],
+      "@api/*": ["./api/*"],
+      "@components/*": ["./components/*"],
+      "@containers/*": ["./containers/*"],
+      "@hooks/*": ["./hooks/*"],
+      "@store/*": ["./store/*"],
+      "@utils/*": ["./utils/*"],
+      "@wallets/*": ["./wallets/*"],
+      "@abis/*": ["./abis/*"],
     }
-  }
+  },
+  
+  "include": [
+    "next-env.d.ts",
+    "**/*.js",
+  ],
+  "exclude": [
+    "out",
+    ".next",
+    "node_modules",
+    "abis",
+  ]
 }
