--- a/package.json
+++ b/package.json
@@ -1,23 +1,64 @@
 {
-  "name": "nft-lottery",
+  "name": "twitter",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "build:test": "rm -rf out && cross-env NODE_ENV=test next build",
+    "build:prod": "rm -rf out && cross-env NODE_ENV=production next build",
+    "start": "next start -p ${PORT:-3000}",
+    "lint": "eslint --ext .js --ignore-path .gitignore .",
+    "lint:fix": "yarn lint --fix",
+    "preview": "http-server -p 8000",
+    "update": "pnpm install && pnpm prune"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.6"
+    "@lidofinance/lido-ui": "^3.8.1",
+    "@material-ui/core": "^4.11.0",
+    "@rainbow-me/rainbowkit": "^1.3.0",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@svgr/core": "^5.4.0",
+    "@svgr/webpack": "^5.4.0",
+    "autoprefixer": "^10.4.19",
+    "axios": "^1.6.2",
+    "bignumber.js": "^9.1.1",
+    "copy-to-clipboard": "^3.3.3",
+    "date-fns": "^2.29.2",
+    "date-fns-tz": "^1.3.7",
+    "dayjs": "^1.11.9",
+    "ethers": "^5.7.2",
+    "lodash": "^4.17.21",
+    "next": "^13.4.0",
+    "postcss": "^8.4.38",
+    "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
+    "react-device-detect": "^2.2.3",
+    "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-jazzicon": "^1.0.4",
+    "react-redux": "^8.1.2",
+    "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
+    "sass": "^1.64.2",
+    "styled-components": "^6.1.1",
+    "viem": "^1.19.11",
+    "wagmi": "^1.4.8"
   },
   "devDependencies": {
-    "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.6"
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.12.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.1.2",
+    "tailwindcss": "^3"
   }
 }
