improve the page style and add the mint page

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -20,6 +20,7 @@
     "baseUrl": ".",
     "paths": {
       "@icons/*": ["./assets/icons/*"],
+      "@images/*": ["./assets/images/*"],
       "@styles/*": ["./assets/styles/*"],
       "@config/*": ["./config/*"],
       "@api/*": ["./api/*"],
