--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 EXPLORER_HOST_BLAST=https://blastscan.io
 EXPLORER_HOST_SCROLL=https://scrollscan.com
-EXPLORER_HOST_ETH=https://sepolia.etherscan.io
+EXPLORER_HOST_ETH=https://etherscan.io
 RPC_URL=https://rpc.blast.io
 IS_PROD=true
