--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.1.2",
-    "tailwindcss": "^3"
+    "tailwindcss": "^3",
+    "vercel": "^37.3.0"
   }
 }
